@@ -14,6 +14,7 @@ import javax.validation.constraints.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "currentstate")
@@ -120,7 +121,7 @@ public class CurrentState {
     public List<String> getUserAnswers() {
         if (userResponse.isEmpty())
             return null;
-        List<String> answers = Arrays.stream(userResponse.split(",")).toList();
+        List<String> answers = Arrays.stream(userResponse.split(",")).collect(Collectors.toList());
         return answers;
     }
 
